kubedefs/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprofile-app-deploy
  labels:
    project: vprofile
    app: vprofile-app
spec:
  replicas: 1
  selector:
    matchLabels:
      project: vprofile
      app: vprofile-app
  template:
    metadata:
      labels:
        project: vprofile
        app: vprofile-app
    spec:
      containers:
        - name: vprofile-app
          image: w2124docker/abc-vprofile-app
          ports:
            - containerPort: 8080
              name: app-port
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      # check dependencies(db, rabbitmq & memcache) before starting the application
