kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  # same name used in the application properties file to connect to the database service
  name: vprodb
  labels:
    project: vprofile
    app: vprofile-db
spec:
  selector:
    project: vprofile
    app: vprofile-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: vprofile-db-port
  type: ClusterIP
